/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 Jacob DeBerry
 */
@startuml
'https://plantuml.com/class-diagram

solution44 <|-- Inventory
Inventory <|-- Product

class solution44 {
Scanner in

main()
}

class Inventory {
Product[] products

getProducts()
setProducts()
}

class Product {
String name
double price
int quantity

getName()
getPrice()
getQuantity()
toString()
}
@enduml